force-app/main/default/objects/RH_Biomarker__c/RH_Biomarker__c.object-meta.xml
<CustomObject>
    <label>Biomarker</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Biomarkers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>