force-app/main/default/objects/RH_Biomarker__c/fields/Assessed_on_datetime__c.field-meta.xml
<CustomField>
    <fullName>Assessed_on_datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessed on datetime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>