force-app/main/default/objects/RH_Biomarker__c/fields/BiomarkerVendorReachoutStatus__c.field-meta.xml
<CustomField>
    <fullName>BiomarkerVendorReachoutStatus__c</fullName>
    <label>Biomarker Vendor Reachout Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>