force-app/main/default/objects/RH_Biomarker__c/fields/Integration_Biomarker__c.field-meta.xml
<CustomField>
    <fullName>Integration_Biomarker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Biomarker</label>
    <referenceTo>Integration_Biomarker__c</referenceTo>
    <relationshipLabel>Biomarkers</relationshipLabel>
    <relationshipName>Biomarkers</relationshipName>
    <type>Lookup</type>
</CustomField>