force-app/main/default/objects/RH_Biomarker__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
    <label>Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Biomarkers</relationshipLabel>
    <relationshipName>Biomarkers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>