force-app/main/default/objects/RH_Biomarker__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral</label>
    <type>Checkbox</type>
</CustomField>