force-app/main/default/objects/RH_Biomarker__c/fields/Referral_Auto_Dialer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Referral_Auto_Dialer_Consent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Auto-Dialer Consent</label>
    <type>DateTime</type>
</CustomField>