force-app/main/default/objects/RH_Biomarker__c/fields/Vendor_Source__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Source__c</fullName>
    <label>Vendor/Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KI</fullName>
            </value>
            <value>
                <fullName>ePR</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>