force-app/main/default/objects/RH_Biomarker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessed_On__c</columns>
    <columns>Participant_Enrollment__c</columns>
    <columns>Assessed_on_datetime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>